<resources>
    <string name="app_name">Introduction</string>
    <string name="notification_error_ssl_cert_invalid">Invalid SSL Certificate</string>
    <string name="ssl_error_postive_button">Continue</string>
    <string name="ssl_error_negative_button">Cancel</string>
    <string name="track_category">Track :</string>
    <string name="country_category">Country :</string>
    <string name="email_category">Email :</string>
    <string name="phone_number_category">Phone Number :</string>
    <string name="slack_username_category">Slack Username :</string>
    <string name="track_value">Android</string>
    <string name="country_value">Tunisia</string>
    <string name="email_value" translatable="false">boutheinabouchahda@gmail.com</string>
    <string name="phone_number_value" translatable="false">+216 20 671 461</string>
    <string name="slack_uername_value" translatable="false">\@BB119</string>
    <string name="extended_name">Boutheina Bouchahda</string>
    <string name="welcome_text">Welcome to ALC 4.0</string>
    <string name="google_icon_description">Google Icon</string>
    <string name="andela_icon_description">Andela Icon</string>
    <string name="about_alc">About ALC</string>
    <string name="about_me">About Me</string>
    <string name="app_display_name">ALC 4 Phase 1</string>
    <string name="divided_name">Boutheina Bouchahda</string>
</resources>
