<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".AboutMeActivity">

    <android.support.v7.widget.CardView
        android:id="@+id/stylish_background"
        style="@style/BackgroundCard"
        app:layout_constraintBottom_toBottomOf="@id/id_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/id_layout"
        style="@style/SmallScreenLinearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image"
            style="@style/SmallScreenRoundPhoto"
            app:civ_border_color="#FFFFFFFF"
            app:civ_border_width="2dp" />

        <TextView
            android:id="@+id/name_text_view"
            style="@style/SmallScreenTexts.NameTextView" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:padding="16dp"
        style="@style/SmallScreenLinearLayout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/stylish_background">

        <LinearLayout
            style="@style/SmallScreenLinearLayout"
            android:layout_marginTop="0dp"
            android:layout_height="match_parent"
            >

            <TextView
                style="@style/SmallScreenTexts"
                android:text="@string/track_category" />

            <TextView
                style="@style/SmallScreenTexts"
                android:text="@string/country_category" />

            <TextView
                style="@style/SmallScreenTexts"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/email_category" />

            <TextView
                style="@style/SmallScreenTexts"
                android:text="@string/phone_number_category" />

            <TextView
                style="@style/SmallScreenTexts"
                android:text="@string/slack_username_category" />
        </LinearLayout>

        <LinearLayout
            style="@style/SmallScreenLinearLayout"
            android:layout_marginStart="8dp"
            android:layout_marginTop="0dp">

            <TextView
                style="@style/SmallScreenTexts"
                android:text="@string/track_value" />

            <TextView
                style="@style/SmallScreenTexts"
                android:text="@string/country_value" />

            <TextView
                style="@style/SmallScreenTexts"
                android:text="@string/email_value" />

            <TextView
                style="@style/SmallScreenTexts"
                android:text="@string/phone_number_value" />

            <TextView
                style="@style/SmallScreenTexts"
                android:text="@string/slack_uername_value" />
        </LinearLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>